[package]
name = "tts_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json","blocking"] }
tokio = { version = "1.19.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

base64 = "0.13.0"

anyhow = "1.0.58"

# For Streamlabs
bytes = "1.2.1"